# released

./: .envrc  Cargo.toml  Justfile  README.md
.github/workflows/: build.yml  release.yml
src/: cli.rs  config.rs  errors.rs  install.rs  main.rs  spinner.rs  system.rs  version.rs
src/cmd/: add.rs  list.rs  mod.rs  remove.rs  update.rs
